[gd_scene load_steps=3 format=3 uid="uid://dp02kkj6ungqb"]

[ext_resource type="Script" path="res://8_card_demo/control_demo_代码架构梳理后/component/area_componet.gd" id="1_q0h0c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcqr4"]
size = Vector2(110, 110)

[node name="AreaComponet" type="Area2D"]
script = ExtResource("1_q0h0c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(55, 55)
shape = SubResource("RectangleShape2D_fcqr4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
